<resources>
    <string name="app_name">Railway Signal Inspection</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="welcome_headline">铁路信号巡检系统</string>
    <string name="login_button">登陆</string>
    <string name="welcome_second_headline">Railway Signal Inspection System\nPower by Grim</string>
    <string name="save_check">记住账号密码</string>
    <string name="menu_item_setting">设置</string>
    <string name="menu_item_logout">退出</string>
    <string name="address_hint">域名或IP地址</string>
    <string name="address_text">Domain name or IP address</string>
    <string name="port_text">Port</string>
    <string name="port_hint">端口号</string>
    <string name="button_setting_commit">确认</string>
    <string name="button_setting_cancel">取消</string>
    <string name="scan_hint">请扫描设备标签后更新</string>
    <string name="button_update">更新状态信息</string>
    <string name="logo_nfc">logo_nfc</string>
    <string name="button_burn">写入数据</string>
    <string name="burn_device_id_hint">请输入唯一设备号</string>
    <string name="burn_device_name_hint">请输入通用设备名</string>
    <string name="burn_device_type_hint">请输入设备型号</string>
    <string name="burn_device_location_hint">请输入设备公里标或载体</string>
    <string name="burn_hint">请将手机靠近标签完成写入</string>
    <string name="device_id">设备号</string>
    <string name="device_name">设备名</string>
    <string name="device_type">设备型号</string>
    <string name="device_location">设备位置</string>
    <string name="device_simple_info">device_id,device_name,device_type,device_location</string>
    <string name="setting_label">设置</string>
    <string name="device_status">设备状态</string>
    <string name="device_status_hint">请输入设备状态</string>
    <string name="select_button_read">读取标签信息</string>
    <string name="select_button_write">写入标签信息</string>
    <string name="scan_label">读取</string>
    <string name="burn_label">写入</string>
    <string name="select_label">选择</string>
    <string name="exit_app">退出应用</string>
    <string name="step_label">步骤</string>
    <string name="plan_label">计划</string>
</resources>
